# ameo-project-management-tool

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  docker-compose.prod.yml  docker-compose.yml
.gitea/workflows/: deploy-homelab.yml
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260510_0001_initial_product_schema.py  20260510_0002_add_notifications.py  20260609_0003_add_site_admin.py  20260611_0004_add_api_tokens.py
backend/app/: __init__.py  activity.py  auth.py  main.py  models.py  notifications.py  permissions.py  schemas.py  storage.py
backend/app/api/: api_tokens.py  attachments.py  auth.py  comments.py  notifications.py  projects.py  routes.py  site_admin.py  tasks.py  users.py  workspaces.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/scripts/: export_openapi.py
backend/tests/: conftest.py  test_api_tokens.py  test_attachments.py  test_auth.py  test_comments_activity.py  test_notifications.py  test_openapi_contract.py  test_projects_tasks.py  test_site_admin.py  test_users.py  test_workspace_members.py
docs/: api-client.md  docker-compose.md  garage.toml  openapi.json
mcp-server/: README.md  pyproject.toml  server.py
mobile/: README.md  pubspec.yaml
mobile/ios/Runner.xcodeproj/: project.pbxproj
mobile/lib/: main.dart
mobile/test/: widget_test.dart
scripts/: setup_garage_dev.sh
web/: .dockerignore  Dockerfile  README.md  eslint.config.mjs  package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
(+10 files in other folders)
