[build-system]
requires = ["hatchling>=1.29.0,<2.0.0"]
build-backend = "hatchling.build"

[project]
name = "ameo-backend"
version = "0.1.0"
description = "FastAPI backend for the Ameo project management tool."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4,<2.0.0",
    "boto3>=1.43.6,<2.0.0",
    "fastapi>=0.136.1,<1.0.0",
    "PyJWT>=2.12.1,<3.0.0",
    "pydantic-settings>=2.14.1,<3.0.0",
    "psycopg[binary]>=3.3.4,<4.0.0",
    "python-multipart>=0.0.27,<1.0.0",
    "sqlalchemy>=2.0.49,<3.0.0",
    "uvicorn[standard]>=0.46.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28.1,<1.0.0",
    "pytest>=9.0.3,<10.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
